# dicom-hl7-mcp-server

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  sales-page-copy.md
.mcp/: server.json
examples/: claude-desktop-config.json  usage-examples.md
src/dicom_hl7_mcp/: __init__.py  __main__.py  config.py  server.py
src/dicom_hl7_mcp/client/: __init__.py
src/dicom_hl7_mcp/knowledge/: __init__.py  dicom_dictionary.py  fhir_mappings.py  hl7_segments.py
src/dicom_hl7_mcp/pacs/: __init__.py  connection.py  dicomweb_client.py  dimse_client.py  models.py  phi_guard.py
src/dicom_hl7_mcp/tools/: __init__.py  dicom_tags.py  fhir_converter.py  field_mapper.py  hl7_parser.py  mirth_generator.py  pacs_combined.py  pacs_connectivity.py
src/dicom_hl7_mcp/utils/: formatting.py  license.py
tests/: __init__.py  conftest.py  test_dicom_tags.py  test_fhir_converter.py  test_field_mapper.py  test_hl7_parser.py  test_pacs_connection.py  test_pacs_connectivity.py  test_pacs_phi_guard.py
tests/mocks/: __init__.py  fake_pacs.py
