[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicom-hl7-mcp"
version = "0.1.2"
description = "DICOM/HL7 Developer AI Assistant — MCP server for healthcare integration engineers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NyxTools"},
]
keywords = [
    "dicom", "hl7", "fhir", "pacs", "ris", "healthcare",
    "mcp", "mirth-connect", "medical-imaging", "interoperability",
    "radiology", "integration", "hl7v2", "health-it",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/NyxToolsDev/dicom-hl7-mcp-server"
Documentation = "https://github.com/NyxToolsDev/dicom-hl7-mcp-server#readme"
Issues = "https://github.com/NyxToolsDev/dicom-hl7-mcp-server/issues"
Changelog = "https://github.com/NyxToolsDev/dicom-hl7-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
dicom-hl7-mcp = "dicom_hl7_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dicom_hl7_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
